--- a/Tech.html
+++ b/Tech.html
@@ -24,7 +24,7 @@
             </div>
             <div class="top">
                 <ul class="drop-down-menu">
-                    <li> <a href="/Managemaent.html">管理</a></li>
+                    <li> <a href="/Management.html">管理</a></li>
                     <li><a href="#">學習直通車</a>
                         <ul>
                             <li><a href="#">工業互聯網類</a>
@@ -93,7 +93,7 @@
                                 </div>
 
                                 <div class="Words1">
-                                    <h2>Randy Pausch時間管理演講</h2>
+                                    <h2 class="content">Randy Pausch時間管理演講</h2>
                                     <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
                                         2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
@@ -111,7 +111,7 @@
                                     <img src="/listpic/1-1.jfif" alt="">
                                 </div>
                                 <div class="Words1">
-                                    <h2>科技洞悉你的感受</h2>
+                                    <h2 class="content">科技洞悉你的感受</h2>
                                     <h6>演講人:波碧·克文</h6>
                                     <h6 class="content">
                                         當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
@@ -128,7 +128,7 @@
                                     <img src="/listpic/2-2.jfif" alt="">
                                 </div>
                                 <div class="Words2">
-                                    <h2>科技將如何改造我們</h2>
+                                    <h2 class="content">科技將如何改造我們</h2>
                                     <h6>演講人:Ray Kurzweil</h6>
                                     <h6 class="content">
                                         發明家，企業家和展望未來的夢想家 Ray Kurzweil，
@@ -145,7 +145,7 @@
                                     <img src="/listpic/2-3.jfif" alt="">
                                 </div>
                                 <div class="Words3">
-                                    <h2> 奈米科技的未來</h2>
+                                    <h2 class="content"> 奈米科技的未來</h2>
                                     <h6>演講人:喬治．圖雷斯基</h6>
                                     <h6 class="content">
                                         每年，矽晶的電腦晶片大小都會縮小一半，而且速度會增加一倍，使我們的電子設備變得越來越方便、越來越親民。但如果有一天我們的晶片不能再縮小了，那會發生什麼事？喬治．圖雷斯基（George
@@ -162,7 +162,7 @@
                                     <img src="/listpic/2-4.jfif" alt="">
                                 </div>
                                 <div class="Words4">
-                                    <h2>談科技如何演化</h2>
+                                    <h2 class="content">談科技如何演化</h2>
                                     <h6>演講人:Kevin Kelly</h6>
                                     <h6 class="content">
                                         科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</h6>
@@ -178,7 +178,7 @@
                                     <img src="/listpic/2-5.jfif" alt="">
                                 </div>
                                 <div class="Words4">
-                                    <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
+                                    <h2 class="content">透過藝術來呈現出科技如何建構我們的現實</h2>
                                     <h6>演講人:李家寶</h6>
                                     <h6 class="content">
                                         在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。
@@ -214,7 +214,7 @@
                                     <img src="/listpic/2-4.jfif" alt="">
                                 </div>
                                 <div class="Words4">
-                                    <h2>談科技如何演化</h2>
+                                    <h2 class="content">談科技如何演化</h2>
                                     <h6>演講人:Kevin Kelly</h6>
                                     <h6 class="content">
                                         科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</h6>
@@ -230,7 +230,7 @@
                                     <img src="/listpic/2-5.jfif" alt="">
                                 </div>
                                 <div class="Words4">
-                                    <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
+                                    <h2 class="content">透過藝術來呈現出科技如何建構我們的現實</h2>
                                     <h6>演講人:李家寶</h6>
                                     <h6 class="content">
                                         在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。
@@ -245,7 +245,7 @@
                                     <img src="/listpic/2-1.jfif" alt="">
                                 </div>
                                 <div class="Words1">
-                                    <h2>科技洞悉你的感受</h2>
+                                    <h2 class="content">科技洞悉你的感受</h2>
                                     <h6>演講人:波碧·克文</h6>
                                     <h6 class="content">
                                         當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
@@ -263,7 +263,7 @@
                                     <img src="/listpic/2-2.jfif" alt="">
                                 </div>
                                 <div class="Words2">
-                                    <h2>科技將如何改造我們</h2>
+                                    <h2 class="content">科技將如何改造我們</h2>
                                     <h6>演講人:Ray Kurzweil</h6>
                                     <h6 class="content">
                                         發明家，企業家和展望未來的夢想家 Ray Kurzweil，
@@ -280,7 +280,7 @@
                                     <img src="/listpic/2-3.jfif" alt="">
                                 </div>
                                 <div class="Words3">
-                                    <h2> 奈米科技的未來</h2>
+                                    <h2 class="content"> 奈米科技的未來</h2>
                                     <h6>演講人:喬治．圖雷斯基</h6>
                                     <h6 class="content">
                                         每年，矽晶的電腦晶片大小都會縮小一半，而且速度會增加一倍，使我們的電子設備變得越來越方便、越來越親民。但如果有一天我們的晶片不能再縮小了，那會發生什麼事？喬治．圖雷斯基（George
@@ -318,7 +318,7 @@
                                     <img src="/listpic/2-5.jfif" alt="">
                                 </div>
                                 <div class="Words4">
-                                    <h2>透過藝術來呈現出科技如何建構我們的現實</h2>
+                                    <h2 class="content">透過藝術來呈現出科技如何建構我們的現實</h2>
                                     <h6>演講人:李家寶</h6>
                                     <h6 class="content">
                                         在這場可以改變你如何看世界的演說中，設計師和藝術家李家寶介紹了她的概念性計畫，揭露出數位媒體本質上的偏見。從讓你對紅色「過敏」的頭盔，到能用意想不到的方式來過濾網路內容的瀏覽器外掛程式，李家寶的創作呈現出科技如何對我們感知現實的方式產生中介影響。
@@ -333,7 +333,7 @@
                                     <img src="/listpic/2-1.jfif" alt="">
                                 </div>
                                 <div class="Words1">
-                                    <h2>科技洞悉你的感受</h2>
+                                    <h2 class="content">科技洞悉你的感受</h2>
                                     <h6>演講人:波碧·克文</h6>
                                     <h6 class="content">
                                         當科技比我們更了解自己時，會發生什麼事情呢？波碧·克文研究人類如何表達情緒。她認為撲克臉的時代終將結束，因為科技能輕易地讀懂我們透露出來的情緒信號。在一次演講和技術展示中，波碧·克文展示了如何透過「同理心技術」
@@ -351,7 +351,7 @@
                                     <img src="/listpic/2-2.jfif" alt="">
                                 </div>
                                 <div class="Words2">
-                                    <h2>科技將如何改造我們</h2>
+                                    <h2 class="content">科技將如何改造我們</h2>
                                     <h6>演講人:Ray Kurzweil</h6>
                                     <h6 class="content">
                                         發明家，企業家和展望未來的夢想家 Ray Kurzweil，
@@ -368,7 +368,7 @@
                                     <img src="/listpic/2-3.jfif" alt="">
                                 </div>
                                 <div class="Words3">
-                                    <h2> 奈米科技的未來</h2>
+                                    <h2 class="content"> 奈米科技的未來</h2>
                                     <h6>演講人:喬治．圖雷斯基</h6>
                                     <h6 class="content">
                                         每年，矽晶的電腦晶片大小都會縮小一半，而且速度會增加一倍，使我們的電子設備變得越來越方便、越來越親民。但如果有一天我們的晶片不能再縮小了，那會發生什麼事？喬治．圖雷斯基（George
@@ -385,7 +385,7 @@
                                     <img src="/listpic/2-4.jfif" alt="">
                                 </div>
                                 <div class="Words4">
-                                    <h2>談科技如何演化</h2>
+                                    <h2 class="content">談科技如何演化</h2>
                                     <h6>演講人:Kevin Kelly</h6>
                                     <h6 class="content">
                                         科技狂熱者 Kevin Kelly 問：「科技要的是什麼？」，並發現它趨向普遍及複雜，就像生命的演化一樣。</h6>
