--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="cimage">
                         <div id="container"></div>
                         <div style="display:none"></div>
-                        <div style="display:none" class="ele">WELCOM</div>
+                        <div style="display:none" class="ele">WELCOME</div>
                         <div style="display:none"class="ele">B次雲端課堂</div>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                 <p class="mtext1">雲&thinsp;&thinsp; 端</p>
 
                 <div class="select2 move4 ">
-                    <div class="stext "><a href="/Managemaent.html">管理</a></div>
+                    <div class="stext "><a href="/Management.html">管理</a></div>
                     <div class="Options2 corner type">
                         <div class="Otext radiustop"> &ensp;工業互聯網類</div>
                         <div class="Otext"> &ensp;人工智能類</div>
