--- a/Management.html
+++ b/Management.html
@@ -66,7 +66,6 @@
                         </li>
                     </ul>
                 </li>
-
             </ul>
         </div>
         <div class="Right_Content">
@@ -89,8 +88,8 @@
                                     <img src="/listpic/2-1.jfif" alt="">
                                 </div>
 
-                                <div class="Words1">
-                                    <h2>Randy Pausch時間管理演講</h2>
+                                <div class="Word">
+                                    <h2 class="content">Randy Pausch時間管理演講</h2>
                                     <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
                                         2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
@@ -109,8 +108,8 @@
                                     <img src="/listpic/1-2.jfif" alt="">
                                 </div>
 
-                                <div class="Words1">
-                                    <h2>【孫運璿先生管理講座】</h2>
+                                <div class="Word">
+                                    <h2 class="content">【孫運璿先生管理講座】</h2>
                                     <h6>演講人:徐重仁董事長</h6>
                                     <h6 class="content">
                                         本次講演非常榮幸邀請到財團法人商業發展研究院董事長徐重仁先生，以「一生感動
@@ -126,8 +125,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-3.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
+                                <div class="Word">
+                                    <h2 class="content">看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
                                     <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
                                         2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
@@ -143,8 +142,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-4.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>五個步驟做好時間管理？</h2>
+                                <div class="Word">
+                                    <h2 class="content">五個步驟做好時間管理？</h2>
                                     <h6>演講人:陰森IneS</h6>
                                     <h6 class="content">
                                         今天中午聽了一場很棒的演講。講者是307的蔡昀軒(阿森)。昀軒同時申請錄取了美國紐約的Fashion Institute of
@@ -166,8 +165,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-5.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>打造高績效的時間管理專題演講</h2>
+                                <div class="Word">
+                                    <h2 class="content">打造高績效的時間管理專題演講</h2>
                                     <h6>演講人:Anita Chen</h6>
                                     <h6 class="content">
                                         如何有效利用時間，倍增工作的效率，為自已創造最大的產值，是我們追求的目標。用對方法做事，可以少走很多冤枉路，將時間花在成就夢想，而非無用的事物上。
@@ -203,8 +202,8 @@
                                     <img src="/listpic/1-2.jfif" alt="">
                                 </div>
 
-                                <div class="Words1">
-                                    <h2>【孫運璿先生管理講座】</h2>
+                                <div class="Word">
+                                    <h2 class="content">【孫運璿先生管理講座】</h2>
                                     <h6>演講人:徐重仁董事長</h6>
                                     <h6 class="content">
                                         本次講演非常榮幸邀請到財團法人商業發展研究院董事長徐重仁先生，以「一生感動
@@ -220,8 +219,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-3.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
+                                <div class="Word">
+                                    <h2 class="content">看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
                                     <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
                                         2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
@@ -237,8 +236,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-4.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>五個步驟做好時間管理？</h2>
+                                <div class="Word">
+                                    <h2 class="content">五個步驟做好時間管理？</h2>
                                     <h6>演講人:陰森IneS</h6>
                                     <h6 class="content">
                                         今天中午聽了一場很棒的演講。講者是307的蔡昀軒(阿森)。昀軒同時申請錄取了美國紐約的Fashion Institute of
@@ -260,8 +259,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-5.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>打造高績效的時間管理專題演講</h2>
+                                <div class="Word">
+                                    <h2 class="content">打造高績效的時間管理專題演講</h2>
                                     <h6>演講人:Anita Chen</h6>
                                     <h6 class="content">
                                         如何有效利用時間，倍增工作的效率，為自已創造最大的產值，是我們追求的目標。用對方法做事，可以少走很多冤枉路，將時間花在成就夢想，而非無用的事物上。
@@ -277,8 +276,8 @@
                                     <img src="/listpic/2-1.jfif" alt="">
                                 </div>
 
-                                <div class="Words1">
-                                    <h2>Randy Pausch時間管理演講</h2>
+                                <div class="Word">
+                                    <h2 class="content">Randy Pausch時間管理演講</h2>
                                     <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
                                         2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
@@ -315,8 +314,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-3.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
+                                <div class="Word">
+                                    <h2 class="content">看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
                                     <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
                                         2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
@@ -332,8 +331,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-4.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>五個步驟做好時間管理？</h2>
+                                <div class="Word">
+                                    <h2 class="content">五個步驟做好時間管理？</h2>
                                     <h6>演講人:陰森IneS</h6>
                                     <h6 class="content">
                                         今天中午聽了一場很棒的演講。講者是307的蔡昀軒(阿森)。昀軒同時申請錄取了美國紐約的Fashion Institute of
@@ -355,8 +354,8 @@
                                 <div class="video-preview-image">
                                     <img src="/listpic/1-5.jfif" alt="">
                                 </div>
-                                <div class="Words1">
-                                    <h2>打造高績效的時間管理專題演講</h2>
+                                <div class="Word">
+                                    <h2 class="content">打造高績效的時間管理專題演講</h2>
                                     <h6>演講人:Anita Chen</h6>
                                     <h6 class="content">
                                         如何有效利用時間，倍增工作的效率，為自已創造最大的產值，是我們追求的目標。用對方法做事，可以少走很多冤枉路，將時間花在成就夢想，而非無用的事物上。
@@ -372,8 +371,8 @@
                                     <img src="/listpic/2-1.jfif" alt="">
                                 </div>
 
-                                <div class="Words1">
-                                    <h2>Randy Pausch時間管理演講</h2>
+                                <div class="Word">
+                                    <h2  class="content">Randy Pausch時間管理演講</h2>
                                     <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
                                         2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
@@ -392,8 +391,8 @@
                                     <img src="/listpic/1-2.jfif" alt="">
                                 </div>
 
-                                <div class="Words1">
-                                    <h2>【孫運璿先生管理講座】</h2>
+                                <div class="Word">
+                                    <h2 class="content">【孫運璿先生管理講座】</h2>
                                     <h6>演講人:徐重仁董事長</h6>
                                     <h6 class="content">
                                         本次講演非常榮幸邀請到財團法人商業發展研究院董事長徐重仁先生，以「一生感動
