--- a/Tech.html
+++ b/Tech.html
@@ -15,12 +15,12 @@
     <div class="Web_Content">
         <div class="Left_Sidebar">
             <div class="title">
-                <a href="/index.html"><img src="/listpic/Tech.jpg"></a>
+                <a href="/index.html"><img src="/img/Tech.jpg"></a>
             </div>
             <div class="search">
                 <input id="text" class="sbox">
-                <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()"><i
-                        class="fas fa-search"></i></button>
+                <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()">
+                    <i class="fas fa-search"></i></button>
             </div>
             <div class="top">
                 <ul class="drop-down-menu">
@@ -90,7 +90,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-1.jfif" alt="">
+                                    <img src="/img/1-1.jfif" alt="">
                                 </div>
                                 <div class="Words1">
                                     <h2 class="content">科技洞悉你的感受</h2>
@@ -107,7 +107,7 @@
                             <a href="#">
 
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-2.jfif" alt="">
+                                    <img src="/img/2-2.jfif" alt="">
                                 </div>
                                 <div class="Words2">
                                     <h2 class="content">科技將如何改造我們</h2>
@@ -124,7 +124,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-3.jfif" alt="">
+                                    <img src="/img/2-3.jfif" alt="">
                                 </div>
                                 <div class="Words3">
                                     <h2 class="content"> 奈米科技的未來</h2>
@@ -141,7 +141,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-4.jfif" alt="">
+                                    <img src="/img/2-4.jfif" alt="">
                                 </div>
                                 <div class="Words4">
                                     <h2 class="content">談科技如何演化</h2>
@@ -157,7 +157,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-5.jfif" alt="">
+                                    <img src="/img/2-5.jfif" alt="">
                                 </div>
                                 <div class="Words4">
                                     <h2 class="content">透過藝術來呈現出科技如何建構我們的現實</h2>
@@ -193,7 +193,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-4.jfif" alt="">
+                                    <img src="/img/2-4.jfif" alt="">
                                 </div>
                                 <div class="Words4">
                                     <h2 class="content">談科技如何演化</h2>
@@ -209,7 +209,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-5.jfif" alt="">
+                                    <img src="/img/2-5.jfif" alt="">
                                 </div>
                                 <div class="Words4">
                                     <h2 class="content">透過藝術來呈現出科技如何建構我們的現實</h2>
@@ -224,7 +224,7 @@
                         <li class="video-list__item">
                             <a href="/detail.html">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-1.jfif" alt="">
+                                    <img src="/img/2-1.jfif" alt="">
                                 </div>
                                 <div class="Words1">
                                     <h2 class="content">科技洞悉你的感受</h2>
@@ -242,7 +242,7 @@
                             <a href="#">
 
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-2.jfif" alt="">
+                                    <img src="/img/2-2.jfif" alt="">
                                 </div>
                                 <div class="Words2">
                                     <h2 class="content">科技將如何改造我們</h2>
@@ -259,7 +259,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-3.jfif" alt="">
+                                    <img src="/img/2-3.jfif" alt="">
                                 </div>
                                 <div class="Words3">
                                     <h2 class="content"> 奈米科技的未來</h2>
@@ -297,7 +297,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-5.jfif" alt="">
+                                    <img src="/img/2-5.jfif" alt="">
                                 </div>
                                 <div class="Words4">
                                     <h2 class="content">透過藝術來呈現出科技如何建構我們的現實</h2>
@@ -312,7 +312,7 @@
                         <li class="video-list__item">
                             <a href="/detail.html">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-1.jfif" alt="">
+                                    <img src="/img/2-1.jfif" alt="">
                                 </div>
                                 <div class="Words1">
                                     <h2 class="content">科技洞悉你的感受</h2>
@@ -330,7 +330,7 @@
                             <a href="#">
 
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-2.jfif" alt="">
+                                    <img src="/img/2-2.jfif" alt="">
                                 </div>
                                 <div class="Words2">
                                     <h2 class="content">科技將如何改造我們</h2>
@@ -347,7 +347,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-3.jfif" alt="">
+                                    <img src="/img/2-3.jfif" alt="">
                                 </div>
                                 <div class="Words3">
                                     <h2 class="content"> 奈米科技的未來</h2>
@@ -364,7 +364,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-4.jfif" alt="">
+                                    <img src="/img/2-4.jfif" alt="">
                                 </div>
                                 <div class="Words4">
                                     <h2 class="content">談科技如何演化</h2>
