--- a/detail.html
+++ b/detail.html
@@ -44,19 +44,19 @@
         <div class="down">
             <div class="Related-videos">
                 <div class="img1 img-ob">
-                    <img src="2.jpg" alt="">
+                    <img src="/img/2.jpg" alt="">
                 </div>
                 <div class="img2 img-ob">
-                    <img src="2.jpg" alt="">
+                    <img src="/img/2.jpg" alt="">
                 </div>
                 <div class="img3 img-ob">
-                    <img src="2.jpg" alt="">
+                    <img src="/img/2.jpg" alt="">
                 </div>
                 <div class="img4 img-ob">
-                    <img src="2.jpg" alt="">
+                    <img src="/img/2.jpg" alt="">
                 </div>
                 <div class="img5 img-ob">
-                    <img src="2.jpg" alt="">
+                    <img src="/img/2.jpg" alt="">
                 </div>
                 </ol>
             </div>
