--- a/Management.html
+++ b/Management.html
@@ -15,7 +15,7 @@
     <div class="Web_Content">
         <div class="Left_Sidebar">
             <div class="title">
-                <a href="/index.html"><img src="/listpic/Management.jpg"></a>
+                <a href="/index.html"><img src="/img/Management.jpg"></a>
             </div>
             <div class="search">
                 <input id="text" class="sbox">
@@ -85,7 +85,7 @@
                         <li class="video-list__item">
                             <a href="/detail.html">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-1.jfif" alt="">
+                                    <img src="/img/2-1.jfif" alt="">
                                 </div>
 
                                 <div class="Word">
@@ -105,7 +105,7 @@
                             <a href="#">
 
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-2.jfif" alt="">
+                                    <img src="/img/1-2.jfif" alt="">
                                 </div>
 
                                 <div class="Word">
@@ -123,7 +123,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-3.jfif" alt="">
+                                    <img src="/img/1-3.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
@@ -140,7 +140,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-4.jfif" alt="">
+                                    <img src="/img/1-4.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">五個步驟做好時間管理？</h2>
@@ -163,7 +163,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-5.jfif" alt="">
+                                    <img src="/img/1-5.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">打造高績效的時間管理專題演講</h2>
@@ -199,7 +199,7 @@
                             <a href="#">
 
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-2.jfif" alt="">
+                                    <img src="/img/1-2.jfif" alt="">
                                 </div>
 
                                 <div class="Word">
@@ -217,7 +217,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-3.jfif" alt="">
+                                    <img src="/img/1-3.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
@@ -234,7 +234,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-4.jfif" alt="">
+                                    <img src="/img/1-4.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">五個步驟做好時間管理？</h2>
@@ -257,7 +257,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-5.jfif" alt="">
+                                    <img src="/img/1-5.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">打造高績效的時間管理專題演講</h2>
@@ -273,7 +273,7 @@
                         <li class="video-list__item">
                             <a href="/detail.html">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-1.jfif" alt="">
+                                    <img src="/img/2-1.jfif" alt="">
                                 </div>
 
                                 <div class="Word">
@@ -312,7 +312,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-3.jfif" alt="">
+                                    <img src="/img/1-3.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">看完這場演講，你會知道為什麼需要管理好自己的時間</h2>
@@ -329,7 +329,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-4.jfif" alt="">
+                                    <img src="/img/1-4.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">五個步驟做好時間管理？</h2>
@@ -352,7 +352,7 @@
                         <li class="video-list__item">
                             <a href="#">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-5.jfif" alt="">
+                                    <img src="/img/1-5.jfif" alt="">
                                 </div>
                                 <div class="Word">
                                     <h2 class="content">打造高績效的時間管理專題演講</h2>
@@ -368,7 +368,7 @@
                         <li class="video-list__item">
                             <a href="/detail.html">
                                 <div class="video-preview-image">
-                                    <img src="/listpic/2-1.jfif" alt="">
+                                    <img src="/img/2-1.jfif" alt="">
                                 </div>
 
                                 <div class="Word">
@@ -388,7 +388,7 @@
                             <a href="#">
 
                                 <div class="video-preview-image">
-                                    <img src="/listpic/1-2.jfif" alt="">
+                                    <img src="/img/1-2.jfif" alt="">
                                 </div>
 
                                 <div class="Word">
