切換按鈕更新RWD

--- a/Management.html
+++ b/Management.html
@@ -15,15 +15,18 @@
     <div class="Web_Content">
         <div class="Left_Sidebar">
             <div class="title">
-                <a href="/index.html"><img src="/img/Management.jpg"></a>
+                <a href="/index.html"><img class="back" src="/img/Management.jpg" ></a>
+                <a href="/Tech.html"><img class="Change"  src="/img/Change.jpg" ></a>
+            </div>
+            <div>
+                
             </div>
             <div class="search">
                 <input id="text" class="sbox">
                 <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()"><i
-                        class="fas fa-search"></i></button>
+                        class="fas fa-search">搜尋</i></button>
             </div>
             <ul class="drop-down-menu">
-                <li> <a href="/Tech.html">科技</a></li>
                 <li><a href="#">學習直通車</a>
                     <ul>
                         <li><a href="#">領導管理/危機管理</a>
@@ -372,7 +375,7 @@
                                 </div>
 
                                 <div class="Word">
-                                    <h2  class="content">Randy Pausch時間管理演講</h2>
+                                    <h2 class="content">Randy Pausch時間管理演講</h2>
                                     <h6>演講人:Randy Pausch</h6>
                                     <h6 class="content">
                                         2008年，Randy Pausch生前在維吉尼亞大學進行的一場演講，教導學生、老師如何善用自己時間的演講。
