--- a/Tech.html
+++ b/Tech.html
@@ -15,16 +15,16 @@
     <div class="Web_Content">
         <div class="Left_Sidebar">
             <div class="title">
-                <a href="/index.html"><img src="/img/Tech.jpg"></a>
+                <a href="/index.html"><img src="/img/Tech.jpg" class="back"></a>
+                <a href="/Management.html"><img class="Change"  src="/img/Change.jpg" ></a>
             </div>
             <div class="search">
                 <input id="text" class="sbox">
                 <button type="button" type="button" value="Enter" class="sbutton" onclick="showButtonEvent()">
-                    <i class="fas fa-search"></i></button>
+                    <i class="fas fa-search">搜尋</i></button>
             </div>
             <div class="top">
                 <ul class="drop-down-menu">
-                    <li> <a href="/Management.html">管理</a></li>
                     <li><a href="#">學習直通車</a>
                         <ul>
                             <li><a href="#">工業互聯網類</a>
